[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l8e-beam"
version = "0.5.0"
authors = [
  { name="l8e (lighthouse)", email="support@l8e.tech" },
]
description = "A Python SDK for AI agent development, providing powerful decorators for PII redaction and audit logging. Ideal for preparing and securing data before processing with LLMs."
keywords = ["pii", "redaction", "spacy", "decorator", "llm", "ai agent", "data privacy", "security", "nlp"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "spacy>=3.7.0,<3.8.0",
]

[project.urls]
Homepage = "https://l8e.tech"
Issues = "https://github.com/l8eAI/l8e_beam/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["l8e_beam"]